--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==1.0.2
+Flask==0.12.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.11.3
 MarkupSafe==1.1.1
-Werkzeug==0.15.5
-tensorflow==2.0.0
-Pillow>=5.4.0
-numpy==1.17.2
-scikit-learn==0.22.2
-pandas==0.25.1
+Werkzeug==0.14.1
+tensorflow==2.2.0
+Pillow==8.2.0
+numpy==1.19.5
+scikit-learn==0.24.1
+pandas==0.23.0
